--- a/calculator.css
+++ b/calculator.css
@@ -54,6 +54,9 @@ body{
 }
 
 .btn{
+    -webkit-tap-highlight-color: transparent;
+    touch-action: manipulation;
+    
     border: 0;
     width: 60px;
     height: 60px;
